# CMake_iOSmacOS_MetalTemplate

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Assets/: AAPLShaders.metallib  AAPLShaders_ios.metallib
CMake/: ios.toolchain.cmake  ios.toolchain_extended.cmake
src/: CMakeLists.txt
src/Application/: AAPLAppDelegate.h  AAPLAppDelegate.m  AAPLViewController.h  AAPLViewController.m
src/Application/iOS/: Info.plist
src/Application/iOS/Base.lproj/: LaunchScreen.storyboard
src/Application/macOS/: Info.plist
src/Application/macOS/Base.lproj/: Main.storyboard
src/Application/tvOS/: Info.plist
src/Renderer/: AAPLRenderer.m
